fix: Menu options getting overlapped by SideBar

--- a/taskstream/public/scss/taskstream.bundle.scss
+++ b/taskstream/public/scss/taskstream.bundle.scss
@@ -313,7 +313,7 @@
 	max-width: 320px;
 	position: sticky;
 	top: 80px;
-	z-index: 10;
+	z-index: 1;
 
 	border: 1px solid #e2e6ea;
 	border-radius: 8px;
